--- a/style.css
+++ b/style.css
@@ -5,3 +5,15 @@
 body {
     font-size: 15px;
 }
+
+.container__all {
+    margin: 20px auto;
+    padding: 50px;
+    max-width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: hsl(0, 0%, 98%);
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+}
