--- a/style.css
+++ b/style.css
@@ -42,5 +42,8 @@ body {
 
 .container__header p {
     padding: 1em;
-    
+    font-size: .8em;
+    color: hsl(229, 6%, 66%);
+    font-weight: 400;
+    text-align: center;
 }
