--- a/style.css
+++ b/style.css
@@ -62,4 +62,17 @@ body {
 
 .container__cards p{
     color: hsl(229, 6%, 66%);
+    font-size: 13px;
+    padding-bottom: 60px;
+    line-height: 1.4em;
+}
+
+.container__cards h1,p{
+    text-align: left;
+}
+
+.mid__cards {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
