--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 .container__cards h1,p{
-    text-align: left;
+    text-align: center;
 }
 
 .mid__cards {
@@ -96,4 +96,14 @@ body {
 
 .calculator__card {
     border-top: 4px solid hsl(212, 86%, 64%);
+}
+
+.team__builder__card, .supervisor__card, .karma__card, .calculator__card {
+    border-radius: 12px;
+    width: 300px;
+    height: 200px;
+    padding: 25px;
+    margin: 0 15px;
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.5);
+    text-align: center;
 }
